# personal_library

./: .env  .gitignore  README.md  alembic.ini  anna.md  config.py  docker-compose.yaml  dockerfile  settings.py  test.py
alembic/: env.py
alembic/versions/: 1094ab97a536_init.py  3dab2298b765_user_id_in_book.py  63cb4e15348d_init.py  74034c25c1d7_create_table_books.py  7ff6027f96d0_add_id.py
app/: JWT.py  auth.py  database.py  main.py  models.py  schemes.py  session.py  shemes.py
app/components/: auth.py  book.py
app/components/auth/: auth.py  models.py  schemes.py  service.py  utils.py
app/components/book/: book.py  converter.py  models.py  schemes.py  service.py  utils.py
app/database/: config.py  database.py
app/databse/: config.py
migrations/: env.py
migrations/versions/: 330d90f9326f_smth.py  758f24215142_zxc2.py  cd51ff520823_initial.py
models/: models.py
poetry/: pyproject.toml  requirements.txt
src/book/: Ktaya__Okovy_samuraya_(SI)_Litmir.net_bid207603_original_012a7.md  anna.md
tests/: test_auth.py  test_session.py
