[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["sas <kassas20@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.27.0.post1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
