[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["kassas20 <kassas20@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
alembic = "^1.13.1"
uvicorn = "^0.27.1"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
psycopg2-binary = "^2.9.9"
bcrypt = "^4.1.2"
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
